# ExistantMath

./: Cargo.toml
existant_core/: Cargo.toml
existant_core/src/: lib.rs  nums.rs
existant_core/src/abstract_algebra/: addition.rs  mod.rs  properties.rs  util.rs
existant_geoalg/: Cargo.toml
existant_geoalg/existant_geoalg_macros/: Cargo.toml
existant_geoalg/existant_geoalg_macros/src/: lib.rs  matrix.rs
existant_geoalg/src/: lib.rs
existant_geoalg/src/animation/: mod.rs
existant_geoalg/src/complex/: mod.rs  quaternion.rs
existant_geoalg/src/derivative/: mod.rs
existant_geoalg/src/geometry/: mod.rs
existant_geoalg/src/geometry/hypercubes/: mod.rs  rect2d.rs
existant_geoalg/src/geometry/hypersphere/: mod.rs  sphere2d.rs
existant_geoalg/src/geometry/rays/: mod.rs  ray2d.rs  ray3d.rs
existant_geoalg/src/geometry/segments/: mod.rs  segment2d.rs
existant_geoalg/src/geometry/shape/: mod.rs  shape2d.rs
existant_geoalg/src/mappings/: mod.rs  morton.rs
existant_geoalg/src/matrix/: mat2x2.rs  mat2x3.rs  mat2x4.rs  mat3x2.rs  mat3x3.rs  mat3x4.rs  mat4x2.rs  mat4x3.rs  mat4x4.rs  mod.rs
existant_geoalg/src/rotors/: mod.rs  quaternion.rs
existant_geoalg/src/vectors/: mod.rs  vec2d.rs  vec3d.rs  vec4d.rs
existant_raster/: Cargo.toml
existant_raster/src/: lib.rs
existant_structures/: Cargo.toml
existant_structures/src/: lib.rs
existant_structures/src/cpu/: bvh2d.rs  heap.rs  mod.rs
src/: lib.rs  main.rs
